*Edge*

* All 2xx requests are considered successful [Josh Peek]

* Fixed that AssetTagHelper#compute_public_path shouldn't cache the asset_host along with the source or per-request proc's won't run [DHH]

* Removed config.action_view.cache_template_loading, use config.cache_classes instead [Josh Peek]

* Get buffer for fragment cache from template's @output_buffer [Josh Peek]

* Set config.action_view.warn_cache_misses = true to receive a warning if you perform an action that results in an expensive disk operation that could be cached [Josh Peek]

* Refactor template preloading. New abstractions include Renderable mixins and a refactored Template class [Josh Peek]

* Changed ActionView::TemplateHandler#render API method signature to render(template, local_assigns = {}) [Josh Peek]

* Changed PrototypeHelper#submit_to_remote to PrototypeHelper#button_to_remote to stay consistent with link_to_remote (submit_to_remote still works as an alias) #8994 [clemens]

* Add :recursive option to javascript_include_tag and stylesheet_link_tag to be used along with :all. #480 [Damian Janowski]

* Allow users to disable the use of the Accept header [Michael Koziarski]

    The accept header is poorly implemented by browsers and causes strange
	errors when used on public sites where crawlers make requests too.  You
	can use formatted urls (e.g. /people/1.xml) to support API clients in a
	much simpler way.

	To disable the header you need to set:

	config.action_controller.use_accept_header = false

* Do not stat template files in production mode before rendering. You will no longer be able to modify templates in production mode without restarting the server [Josh Peek]

* Deprecated TemplateHandler line offset [Josh Peek]

* Allow caches_action to accept cache store options. #416. [José Valim]. Example:
  
  caches_action :index, :redirected, :if => Proc.new { |c| !c.request.format.json? }, :expires_in => 1.hour
