@@ -41,17 +41,45 @@ module ActionController
       set_content_length!
     end
 
+    # Sets the Last-Modified response header. Returns whether it's older than
+    # the If-Modified-Since request header.
+    def last_modified!(utc_time)
+      headers['Last-Modified'] ||= utc_time.httpdate
+      if request && since = request.headers['HTTP_IF_MODIFIED_SINCE']
+        utc_time <= Time.rfc2822(since)
+      end
+    end
+
+    # Sets the ETag response header. Returns whether it matches the
+    # If-None-Match request header.
+    def etag!(tag)
+      headers['ETag'] ||= %("#{Digest::MD5.hexdigest(ActiveSupport::Cache.expand_cache_key(tag))}")
+      if request && request.headers['HTTP_IF_NONE_MATCH'] == headers['ETag']
+        true
+      end
+    end
 
     private
       def handle_conditional_get!
-        if body.is_a?(String) && (headers['Status'] ? headers['Status'][0..2] == '200' : true)  && !body.empty?
-          self.headers['ETag'] ||= %("#{Digest::MD5.hexdigest(body)}")
-          self.headers['Cache-Control'] = 'private, max-age=0, must-revalidate' if headers['Cache-Control'] == DEFAULT_HEADERS['Cache-Control']
+        if nonempty_ok_response?
+          set_conditional_cache_control!
 
-          if request.headers['HTTP_IF_NONE_MATCH'] == headers['ETag']
-            self.headers['Status'] = '304 Not Modified'
+          if etag!(body)
+            headers['Status'] = '304 Not Modified'
             self.body = ''
           end
+        end
+      end
+
+      def nonempty_ok_response?
+        status = headers['Status']
+        ok = !status || status[0..2] == '200'
+        ok && body.is_a?(String) && !body.empty?
+      end
+
+      def set_conditional_cache_control!
+        if headers['Cache-Control'] == DEFAULT_HEADERS['Cache-Control']
+          headers['Cache-Control'] = 'private, max-age=0, must-revalidate'
         end
       end
 
